--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
+    "nuxt": "^3.5.2",
+    "typescript": "^5.1.3",
+    "vue-tsc": "^1.6.5"
+  },
+  "dependencies": {
+    "@vant/nuxt": "^1.0.1",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/nuxt": "^10.1.2",
+    "vant": "^4.4.1"
   }
 }
